# parallax

./: .gitignore  AGENTS.md  BRANCHING.md  COMMITS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PROJECT_STRUCTURE.md  README.md  REPOSITORY_PROTECTION.md  SECURITY.md  mise.toml
.github/: CODEOWNERS
.github/actions/aggregate-needs/: action.yml
.github/actions/sign-and-attest-archive/: action.yml
.github/workflows/: ci.yml  preview.yml  release.yml
bench/: .gitignore  compose.yml
bench/four-way/: README.md  bench.sh  gen.sh
bench/otlp-fanout/: README.md  compose.maple.yml  compose.signoz.yml  compose.yml  lab.env  rotel.env  setup-vendor.sh  smoke.sh
bench/otlp-fanout/maple/: Dockerfile  entrypoint.sh
bench/otlp-fanout/sentry/: onboard.sh  setup.sh  verify.sh
bench/s3/: README.md  clickhouse-s3-disk.xml  greptimedb-standalone-s3.toml  run-s3-stack.sh
crates/parallax-api/: Cargo.toml
crates/parallax-api/src/: lib.rs
crates/parallax-cli/: Cargo.toml  build.rs
crates/parallax-cli/src/: client.rs  commands.rs  doctor.rs  main.rs
crates/parallax-core/: Cargo.toml
crates/parallax-core/src/: bundle.rs  derive.rs  fingerprint.rs  lib.rs  normalize.rs
crates/parallax-proto/: Cargo.toml
crates/parallax-proto/src/: lib.rs
crates/parallax-server/: Cargo.toml
crates/parallax-server/examples/: seed.rs  seed_links.rs
crates/parallax-server/src/: config.rs  greptime_supervisor.rs  lib.rs  live.rs  otlp_grpc.rs  otlp_http.rs  self_telemetry.rs  serve.rs  worker.rs
crates/parallax-server/tests/: m0_ingest.rs  m1_greptime.rs  m1_pipeline.rs  m1_table_inventory_greptime.rs  m2_api.rs  m2_bundle.rs  m2_metrics_dashboards.rs  m2_metrics_greptime.rs  m3_scenarios.rs  m5_gates.rs
crates/parallax-storage/: Cargo.toml
crates/parallax-storage/src/: adapter.rs  greptime.rs  lib.rs  memory.rs  metadata.rs  model.rs  spool.rs
docs/: market-landscape.md
docs/guide/: agent-howto.md  cli.md  conventions.md  jackin.md  quickstart.md
docs/research/: README.md  a1-eval-result-ledger-and-model-refresh.md  a1-huggingface-row-hash-procedure.md  a1-source-drift-and-leakage-recheck.md  a1-task-source-freeze-check.md  a2-interview-evidence-ledger.md  a3-schema-adoption-corpus-ledger.md  a4-correlation-reliability-ledger.md  a5-stack-decision-ledger.md  a6-redaction-red-team-ledger.md  a6-synthetic-canary-fixture-corpus.md  a7-scope-discipline-ledger.md  agent-access-surface-cli-api-mcp.md  agent-access-surface-safety-ledger.md  agent-and-cli-execution-tracing.md  agent-cli-otel-semconv-mapping.md  agent-observability-technical-review.md  agent-session-tracing-ledger.md  agent-session-tracing-real-tools.md  agentic-observability-competitor-drift-ledger.md  ai-native-observability-and-incident-intelligence.md  bugsink-sentry-compatible-simplicity-recheck.md  build-roadmap-and-validation-sequence.md  bundle-value-evaluation.md  bundle-value-phase0-runbook.md  bundle-value-seed-corpus.md  business-model-and-economics.md  business-model-validation-ledger.md  causal-reconstruction-and-agent-safety.md  ci-failure-context-mvp.md  cli-trace-overhead-and-redaction.md  cli-trace-safety-ledger.md  coroot-mcp-ai-rca-recheck.md  correlation-reliability-real-telemetry-gate.md  datadog-bits-ai-eval-loop.md  deploy-change-and-issue-context.md  deploy-change-context-ledger.md  evidence-bundle-and-schema.md  fixer-component-and-outcome-loop.md  fixer-outcome-ledger.md  (+61 more)
docs/research/00-vision/: ai-native-observability.md  north-star-autonomous-fix-loop.md  platform-direction.md  problem-audience-product-shape.md  thesis.md  world-before-parallax.md
docs/research/architecture/: agent-context-integration.md  agent-trust-boundary-and-prompt-injection.md  api-concept.md  autonomous-fix-loop.md  build-roadmap.md  causal-reconstruction.md  deployment-architecture-map.md  evidence-bundle-schema.md  implementation-concept.md  integration-contract.md  live-telemetry-streaming.md  local-first-v1.md  overview.md  poc-evidence-loop-coverage.md  simple-ui-v2.md  trace-linking.md  v1-build-plan.md  v1-gates-report.md  v1-implementation-spec.md  v1-scope.md
docs/research/capture/: agent-cli-tracing.md  ci-and-flaky-tests.md  correlation.md  deploy-change-context.md  frontend.md  otlp.md  production-db-evidence.md  redaction.md  run-id-standardization.md  rust-stack-instrumentation.md  rust.md  sentry-compatible-oss-tools.md  sentry-ingest.md
docs/research/decisions/: agent-access-surface.md  fixer-boundary.md  go-no-go.md  metadata-store.md  native-otel-tables.md  risks-and-bear-case.md  skeptical-reassessment-2026-05-31.md  skeptical-reassessment-2026-05.md  stack-decision.md  storage-engine.md  strategic-coverage.md  v1-storage-adapter-vision.md
docs/research/greptimedb-vs-clickhouse/: README.md  benchmarking-the-differences.md  caching-and-cold-warm.md  clickhouse-implementation.md  clickhouse-internals.md  compaction-and-merge.md  compression-and-cost.md  continuous-aggregation-and-rollups.md  dedup-and-update-semantics.md  deletes-and-mutations.md  distributed-and-scaling.md  (+24 more)
packaging/homebrew/: README.md  parallax-preview.rb  parallax.rb
poc/evidence-loop/: Cargo.toml  README.md
poc/evidence-loop/fixtures/: agent-sessions.json  deploy-events.json  otlp-logs.json  otlp-trace.json  outcome-rows.json
poc/evidence-loop/fixtures/clirun/: otlp-logs.json  otlp-trace.json
poc/evidence-loop/fixtures/crosstier/: otlp-logs.json  otlp-trace.json
poc/evidence-loop/schema/: evidence-bundle.v0-poc.schema.json  fix-candidate.v0.schema.json
poc/evidence-loop/src/: agent.rs  bound.rs  budget.rs  bundle.rs  deploy.rs  derive.rs  dispatch.rs  fingerprint.rs  hypothesis.rs  instrument.rs  learn.rs  lib.rs  main.rs  otlp.rs  redact.rs  rollup.rs  spike.rs
poc/evidence-loop/tests/: loop_test.rs
prompts/: AGENTS.md  README.md  deep-research-parallax.md  greptimedb-vs-clickhouse-internals.md  parallax-vision-and-restructure.md  v1-implementation.md
scripts/: release.sh
ui/: AGENTS.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: routeTree.gen.ts
(+109 files in other folders)
