[package]
name = "parallax-api"
description = "Parallax GraphQL API schema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
parallax-storage = { workspace = true }
serde_json = { workspace = true }
