[package]
name = "parallax-cli"
description = "Parallax: local-first observability for agent-assisted development"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "parallax"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
parallax-server = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
