[package]
name = "parallax-cli"
description = "Parallax: local-first observability for agent-assisted development"
version.workspace = true
build = "build.rs"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "parallax"
path = "src/main.rs"

[features]
# Single-binary release: serve the web UI from assets compiled in at build
# time (scripts/release.sh builds ui/ first, then enables this).
embed-ui = ["parallax-server/embed-ui"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
parallax-server = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
