[package]
name = "evidence-loop-poc"
version = "0.1.0"
edition = "2021"
description = "Parallax PoC: OTLP JSON -> derived error events -> fingerprint -> trigger -> redacted evidence bundle with canonical hash"
authors = ["Tailrocks"]
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
